RESOLVED FIXED 102101
[CSS Regions] regionlayoutupdate event fires continuously
https://bugs.webkit.org/show_bug.cgi?id=102101
Summary [CSS Regions] regionlayoutupdate event fires continuously
Mike Sierra
Reported 2012-11-13 10:04:47 PST
Copy HTML source into local file and open with Canary or Webkit nightly. The page displays content that threads through a series of CSS regions, the size of each thresholded with min-/max-height CSS. Each time the regionlayoutupdate event fires, the page increments a counter that displays at the top. Expected behavior is for event to fire on the NamedFlow only when: * the regionOverset of any region in the chain changes between fit/empty/overset values. * possibly if there are less significant changes to layout, such as shifts in linebreaks within any of the regions Actual behavior is either: * event fires continuously onload * event fires continuously after resizing page
Attachments
Patch (8.03 KB, patch)
2012-11-28 22:55 PST, Mihnea Ovidenie
no flags
Patch for landing (8.42 KB, patch)
2012-12-02 07:14 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2012-11-14 07:54:25 PST
Taking a quick look, the event fires only when the regions are auto-size regions.
Mihnea Ovidenie
Comment 2 2012-11-28 22:55:15 PST
Dave Hyatt
Comment 3 2012-11-30 12:42:38 PST
Comment on attachment 176654 [details] Patch r=me
Mihnea Ovidenie
Comment 4 2012-12-02 07:14:19 PST
Created attachment 177140 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-12-02 07:36:18 PST
Comment on attachment 177140 [details] Patch for landing Clearing flags on attachment: 177140 Committed r136346: <http://trac.webkit.org/changeset/136346>
WebKit Review Bot
Comment 6 2012-12-02 07:36:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.